# polygrad

./: .clang-format  .gitignore  CHANGELOG.md  CNAME  Makefile  README.md  _config.yml
.githooks/: pre-commit
bench/: bench_backends.c  bench_beam.c  bench_compare.py  bench_cuda.c  bench_hip.c  bench_native_instance.js  bench_polygrad.c  bench_ratios.js  bench_ratios.py  bench_realize.c  bench_tinygrad.py  bench_tinygrad_worker.py  bench_vs_tinygrad.py  bench_wasm_instance.js  bench_wasm_interp.js  bench_x64.c  gen_wasm_browser.c  plot_gpt2_comparison.py  train_gpt2_python.py  train_gpt2_python_gpu.py  train_gpt2_tinygrad.py  train_gpt2_tinygrad_gpu.py  train_gpt2_torch.py  train_gpt2_torch_gpu.py  train_mlp_c.c  train_mlp_python.py  xor_tinygrad_kernels.py
browser/: README.md  package-lock.json  package.json
js/: .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  binding.gyp  napi_api.c  package-lock.json  package.json
py/: MANIFEST.in  README.md  pyproject.toml  setup.py
py/polygrad/: __init__.py  _ffi.py  _native.c  device.py  dtype.py  hf.py  instance.py  tensor.py
py/polygrad/modelzoo/manifests/: gpt2.json
py/polygrad/modelzoo/models/: gpt2.py
py/polygrad/nn/: __init__.py  gpt2.py  modules.py  optim.py  state.py
py/scripts/: sync-csrc.py
py/tests/: test_hf.py  test_instance.py  test_nn.py  test_perf.py  test_tensor.py
r/: DESCRIPTION  LICENSE  NAMESPACE  README.md
src/: alu.c  arena.c  arena.h  autograd.c  bundle.c  bundle.h  codegen.c  codegen.h  dtype.c  exec_plan.c  exec_plan.h  frontend.c  frontend.h  frontend_internal.h  hashmap.c  (+52 more)
(+81 files in other folders)
